implementacion del registro

--- a/FrontEnd/src/app/pages/factura/factura-manage/factura-manage.component.html
+++ b/FrontEnd/src/app/pages/factura/factura-manage/factura-manage.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="CategorySave()" [formGroup]="form" fxLayout="column">
+<form (ngSubmit)="facturaSave()" [formGroup]="form" fxLayout="column">
     <div fxLayout="row" fxLayoutAlign="start center" mat-dialog-title>
         <h2 class="headline m-0 text-xl text-accent" fxFlex="auto">
             <strong>Gestión de factura</strong>
@@ -41,7 +41,7 @@
         <div>
             <div class="demo-button-container">
                 <button mat-raised-button (click)="addItem()" class="demo-button">
-                  Add data
+                  Agregar
                 </button>
                 
               </div>
@@ -60,15 +60,30 @@
                 <th scope="col" class="px-6 py-2">Descripcion</th>
                 <th scope="col" class="px-6 py-2">Cantidad</th>
                 <th scope="col" class="px-6 py-2">Precio Unit.</th>
+                <th scope="col" class="px-6 py-2"></th>
               </tr>
             </thead>
             <tbody >
-              <tr class="border-b dark:border-neutral-500" *ngFor="let item of detalles;let i = index" >
+              <tr class="border-b dark:border-neutral-500" *ngFor="let item of detalles;let i = index" [formGroup]="item">
                 <td class="whitespace-nowrap px-6 py-2 font-medium">{{(i+1)}}</td>
-                <td class="whitespace-nowrap px-6 py-2 ">{{item.descripcion}}</td>
-                <td class="whitespace-nowrap px-6 py-2">{{item.cantidad}}</td>
+                <td class="whitespace-nowrap px-6 py-2 ">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Descripcion</mat-label>
+                        <input matInput formControlName="descripcion">
+                      </mat-form-field>
+                </td>
                 <td class="whitespace-nowrap px-6 py-2">
-                    <div class="relative mb-3" data-te-input-wrapper-init>
+                    <mat-form-field appearance="fill" floatLabel="always">
+                        <mat-label>Cantidad</mat-label>
+                        <input formArrayName="cantidad" matInput type="number" class="example-right-align" placeholder="0" (input)="validarNumeroEntero(i,$event)">
+                        <mat-error *ngIf="item.get('cantidad').hasError('pattern')">
+                            Ingrese solo números enteros.
+                          </mat-error>
+                      </mat-form-field>
+                </td>
+                <td class="whitespace-nowrap px-6 py-2">
+                    
+                    <!-- <div class="relative mb-3" data-te-input-wrapper-init>
                         <input formControlName="precioUnitario" 
                           type="number"
                           class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 dark:peer-focus:text-primary [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
@@ -79,7 +94,17 @@
                           class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary"
                           >Precio
                         </label>
-                      </div>
+                      </div> -->
+                      <mat-form-field appearance="fill" floatLabel="always">
+                        <mat-label>Precio</mat-label>
+                        <input matInput type="number" formControlName="precioUnitario" class="example-right-align" placeholder="0">
+                        <span matPrefix>$&nbsp;</span>
+                      </mat-form-field>
+                    </td>
+                    <td>
+                        <button mat-icon-button color="warn" (click)="removeItem(i)" type="button" aria-label="Example icon button with a heart icon">
+                            <mat-icon [icIcon]="icDelete">favorite</mat-icon>
+                          </button>
                     </td>
               </tr>
               
