--- a/FrontEnd/src/app/pages/factura/factura-manage/factura-manage.component.html
+++ b/FrontEnd/src/app/pages/factura/factura-manage/factura-manage.component.html
@@ -34,86 +34,78 @@
                 <mat-label>F. Emisón</mat-label>
                 <input formControlName="fechaEmision" matInput [matDatepicker]="picker2">
                 <mat-hint>DD/MM/YYYY</mat-hint>
-                <mat-datepicker-toggle matSuffix  [for]="picker2" ></mat-datepicker-toggle>
+                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                 <mat-datepicker #picker2 color="primary"></mat-datepicker>
             </mat-form-field>
         </div>
         <div>
             <div class="demo-button-container">
                 <button mat-raised-button (click)="addItem()" class="demo-button">
-                  Agregar
+                    Agregar
                 </button>
-                
-              </div>
-              
+
+            </div>
+
         </div>
         <div>
-            <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com --> 
-<div class="flex flex-col">
-    <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
-      <div class="inline-block min-w-full py-2 sm:px-6 lg:px-8">
-        <div class="overflow-hidden">
-          <table class="min-w-full text-center text-sm font-light">
-            <thead class="border-b font-medium dark:border-neutral-500">
-              <tr>
-                <th scope="col" class="px-6 py-2">#</th>
-                <th scope="col" class="px-6 py-2">Descripcion</th>
-                <th scope="col" class="px-6 py-2">Cantidad</th>
-                <th scope="col" class="px-6 py-2">Precio Unit.</th>
-                <th scope="col" class="px-6 py-2"></th>
-              </tr>
-            </thead>
-            <tbody >
-              <tr class="border-b dark:border-neutral-500" *ngFor="let item of detalles;let i = index" [formGroup]="item">
-                <td class="whitespace-nowrap px-6 py-2 font-medium">{{(i+1)}}</td>
-                <td class="whitespace-nowrap px-6 py-2 ">
-                    <mat-form-field appearance="fill">
-                        <mat-label>Descripcion</mat-label>
-                        <input matInput formControlName="descripcion">
-                      </mat-form-field>
-                </td>
-                <td class="whitespace-nowrap px-6 py-2">
-                    <mat-form-field appearance="fill" floatLabel="always">
-                        <mat-label>Cantidad</mat-label>
-                        <input formArrayName="cantidad" matInput type="number" class="example-right-align" placeholder="0" (input)="validarNumeroEntero(i,$event)">
-                        <mat-error *ngIf="item.get('cantidad').hasError('pattern')">
-                            Ingrese solo números enteros.
-                          </mat-error>
-                      </mat-form-field>
-                </td>
-                <td class="whitespace-nowrap px-6 py-2">
-                    
-                    <!-- <div class="relative mb-3" data-te-input-wrapper-init>
-                        <input formControlName="precioUnitario" 
-                          type="number"
-                          class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 dark:peer-focus:text-primary [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                          id="exampleFormControlInputNumber"
-                          placeholder="Example label" />
-                        <label
-                          for="exampleFormControlInputNumber"
-                          class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary"
-                          >Precio
-                        </label>
-                      </div> -->
-                      <mat-form-field appearance="fill" floatLabel="always">
-                        <mat-label>Precio</mat-label>
-                        <input matInput type="number" formControlName="precioUnitario" class="example-right-align" placeholder="0">
-                        <span matPrefix>$&nbsp;</span>
-                      </mat-form-field>
-                    </td>
-                    <td>
-                        <button mat-icon-button color="warn" (click)="removeItem(i)" type="button" aria-label="Example icon button with a heart icon">
-                            <mat-icon [icIcon]="icDelete">favorite</mat-icon>
-                          </button>
-                    </td>
-              </tr>
-              
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
+            <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com -->
+            <div class="flex flex-col">
+                <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
+                    <div class="inline-block min-w-full py-2 sm:px-6 lg:px-8">
+                        <div class="overflow-hidden">
+                            <table class="min-w-full text-center text-sm font-light">
+                                <thead class="border-b font-medium dark:border-neutral-500">
+                                    <tr>
+                                        <th scope="col" class="px-6 py-2">#</th>
+                                        <th scope="col" class="px-6 py-2">Descripcion</th>
+                                        <th scope="col" class="px-6 py-2">Cantidad</th>
+                                        <th scope="col" class="px-6 py-2">Precio Unit.</th>
+                                        <th scope="col" class="px-6 py-2"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr class="border-b dark:border-neutral-500"
+                                        *ngFor="let item of detalles;let i = index" [formGroup]="item">
+                                        <td class="whitespace-nowrap px-6 py-2 font-medium">{{(i+1)}}</td>
+                                        <td class="whitespace-nowrap px-6 py-2 ">
+                                            <mat-form-field appearance="fill">
+                                                <mat-label>Descripcion</mat-label>
+                                                <input matInput formControlName="descripcion">
+                                            </mat-form-field>
+                                        </td>
+                                        <td class="whitespace-nowrap px-6 py-2">
+                                            <mat-form-field appearance="fill" floatLabel="always">
+                                                <mat-label>Cantidad</mat-label>
+                                                <input formControlName="cantidad" matInput type="number"
+                                                    class="example-right-align" placeholder="0"
+                                                    (input)="validarNumeroEntero(i,$event)">
+                                                <mat-error *ngIf="item.get('cantidad').hasError('pattern')">
+                                                    Ingrese solo números enteros.
+                                                </mat-error>
+                                            </mat-form-field>
+                                        </td>
+                                        <td class="whitespace-nowrap px-6 py-2">
+                                            <mat-form-field appearance="fill" floatLabel="always">
+                                                <mat-label>Precio</mat-label>
+                                                <input matInput type="number" formControlName="precioUnitario"
+                                                    class="example-right-align" placeholder="0">
+                                                <span matPrefix>$&nbsp;</span>
+                                            </mat-form-field>
+                                        </td>
+                                        <td>
+                                            <button mat-icon-button color="warn" (click)="removeItem(i)" type="button"
+                                                aria-label="Example icon button with a heart icon">
+                                                <mat-icon [icIcon]="icDelete">favorite</mat-icon>
+                                            </button>
+                                        </td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </mat-dialog-content>
