--- a/FrontEnd/src/app/pages/cliente/cliente-manage/cliente-manage.component.html
+++ b/FrontEnd/src/app/pages/cliente/cliente-manage/cliente-manage.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="CategorySave()" [formGroup]="form">
     <div fxLayout="row" fxLayoutAlign="start center" mat-dialog-title>
         <h2 class="headline m-0 text-xl text-accent" fxFlex="auto">
-            <strong>Gestión de categoría</strong>
+            <strong>Gestión de clientes</strong>
         </h2>
         <button class="text-secondary" mat-dialog-close mat-icon-button type="button">
             <mat-icon [icIcon]="icClose"></mat-icon>
